added gradle build script that should build and run backend - but only tested with a helloworld application

--- a/build.gradle
+++ b/build.gradle
@@ -25,16 +25,22 @@ dependencies {
     repositories { jcenter() }
     dependencies { testImplementation "org.mockito:mockito-core:3.+" }
 }
-
+apply plugin: 'java'
 test {
     useJUnitPlatform()
 }
-//jar {
-//    manifest {
-//        attributes(
-//                'Server':
-//    }
-//}
-task makeSchlarbServer{
+jar {
+    manifest {
+        attributes(
+                'Main-Class':'org.schlarb.Server'
+        )
+    }
+}
+task runjar(type: JavaExec){
+    main = 'org.schlarb.Server'
+    classpath = sourceSets.main.runtimeClasspath
+}
+task runSchlarbServer(dependsOn:['test', 'runjar']){
+//    lets try this...
 
 }
