added helo world to gradle

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,11 @@ dependencies {
     dependencies { testImplementation "org.mockito:mockito-core:3.+" }
 }
 apply plugin: 'java'
+hello{
+    doLast{
+        println 'hello world'
+    }
+}
 test {
     useJUnitPlatform()
 }
@@ -41,7 +46,7 @@ task runjar(type: JavaExec){
     main = 'org.schlarb.Server'
     classpath = sourceSets.main.runtimeClasspath
 }
-task runSchlarbServer(dependsOn:['test', 'runjar']){
+task runSchlarbServer(dependsOn:['hello', 'test', 'runjar']){
 //    lets try this...
 
 }
