--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
 plugins {
     id 'java'
+    id 'jacoco'
 }
 
 group 'org.example'
 version '1.0-SNAPSHOT'
+apply plugin: 'java'
 
 repositories {
     mavenCentral()
@@ -25,11 +27,28 @@ dependencies {
     repositories { jcenter() }
     dependencies { testImplementation "org.mockito:mockito-core:3.+" }
 }
-apply plugin: 'java'
 
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport // report is always generated after tests run
 }
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.enabled false
+        csv.enabled false
+        html.destination layout.buildDirectory.dir('jacocoHtml').get().asFile
+    }
+}
+
+jacoco {
+    toolVersion = '0.8.5'
+    reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
+    // https://docs.gradle.org/current/userguide/jacoco_plugin.html
+    // Gradle default for reports Directory is $buildDir/reports/jacoco
+}
+
 jar {
     manifest {
         attributes(
@@ -37,15 +56,17 @@ jar {
         )
     }
 }
+
 //might need a build task to make this build dependencies before trying to mak jar file!
 task runjar(type: JavaExec){
     main = 'org.schlarb.Server'
     classpath = sourceSets.main.runtimeClasspath
 }
+
 task runSchlarbServer(dependsOn:[ 'hello', 'test', 'runjar']){
 //    lets try this...
-
 }
+
 task hello{
     doLast {
         println 'hello jenkins'
