--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,13 @@ jacoco {
     // Gradle default for reports Directory is $buildDir/reports/jacoco
 }
 
+test {
+    jacoco {
+        destinationFile = layout.buildDirectory.file('jacoco/jacocoTest.exec').get().asFile
+        classDumpDir = layout.buildDirectory.dir('jacoco/classpathdumps').get().asFile
+    }
+}
+
 jar {
     manifest {
         attributes(
