--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ dependencies {
 	compile "org.slf4j:slf4j-simple:1.8.0-beta4"
 	compile "com.fasterxml.jackson.core:jackson-databind:2.10.3"
 	implementation 'org.json:json:20171018'
+
+	//spring starter project postgres dependency
+	//	runtimeOnly 'org.postgresql:postgresql'
 }
 
 test {
