local db works?!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 
 ##seems to work
 #spring.jpa.properties.hibernate.default_schema=schlarb
-#need ot create this schema manually
+#need to create this schema manually
 spring.jpa.properties.javax.persistence.schema-generation.database.action=create-drop
 
 #WIP
