added artist model but not connected to user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=schlarb
 server.port=7000
 
 #Spring H2 Properties
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
 
 #Spring JPA Properties
 spring.jpa.show-sql=true
@@ -17,20 +17,18 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 
-# get postgres to start
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=password
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
-
-
-##seems to work
-#spring.jpa.properties.hibernate.default_schema=schlarb
-#need to create this schema manually
-spring.jpa.properties.javax.persistence.schema-generation.database.action=create-drop
-
-#WIP
+## get postgres to start
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=password
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+#
+#
+###seems to work
+##spring.jpa.properties.hibernate.default_schema=schlarb
+##need to create this schema manually
+#spring.jpa.properties.javax.persistence.schema-generation.database.action=create-drop
 
 
 
